# ProbStatipy

./: .gitignore  CHANGELOG.md  LEARN.md  LICENCE.txt  README.md  pyproject.toml  pystats_central.py  pystats_spread.py  understanding_modules.ipynb
src/ProbStatipy/: central.py  probability.py  spread.py
