[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "StatsPro"
version = "0.0.1"
authors = [
  { name="GREGORY OCHIENG OPONDI", email="ds4gregory@gmail.com" },
]
description = "A Python package to compute probabilities and statistics"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/0gregory0/StatsPro"
Issues = "https://github.com/0gregory0/StatsPro/issues"